# TeleOperation-Robot

Firmware/src/: main.cpp
zenorak_bringup/: CMakeLists.txt  package.xml
zenorak_description/: CMakeLists.txt  package.xml
zenorak_ros2_control/: CMakeLists.txt  package.xml
zenorak_ros2_control/config/: controller.yaml
zenorak_ros2_control/description/: zenorak.xacro
zenorak_ros2_control/launch/: joystick.launch.py  launch_robot.launch.py  rsp.launch.py
zenorak_ros2_control/meshes/collision/: front_right_wheel.STL  rear_left_wheel.STL  rear_right_wheel.STL
zenorak_ros2_control/meshes/visual/: base_link.STL  front_left_wheel.STL
zenorak_ros2_control/src/: firmware.cpp
zenorak_serial/: CMakeLists.txt  package.xml
zenorak_serial/scripts/: zenorak_serial.py
zenorak_teleop/: CMakeLists.txt  package.xml
zenorak_teleop/launch/: teleop.launch.py
zenorak_teleop/scripts/: zenorak_teleop.py
