<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 
This XML schema ensures your package.xml is valid for ROS 2 format 3 packages.
-->

<package format="3">
  <!-- ROS 2 package format (3 is recommended for Humble and later) -->

  <name>zenorak_serial</name>
  <!-- Package name. Must match folder name and CMakeLists project name -->

  <version>0.0.0</version>
  <!-- Package version. Update as you release changes -->

  <description>Bridge node that forwards teleop commands from ROS 2 to Arduino via serial.</description>
  <!-- Short description of the package -->

  <maintainer email="bargavanroboticsengineer@gmail.com">bargavan</maintainer>
  <!-- Maintainer info. Required for ROS 2 packages -->

  <license>Apache-2.0</license>
  <!-- License under which this package is released -->

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Required because this package uses the ament build system -->

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <!-- Needed for ROS 2 Python client library -->

  <depend>std_msgs</depend>
  <!-- Needed because we subscribe to std_msgs/String -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <!-- Automatic linting for code style checks -->

  <test_depend>ament_lint_common</test_depend>
  <!-- Common lint rules for ROS 2 -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Declares that this package uses the ament_cmake build system -->
  </export>
</package>
