<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 
This XML schema reference ensures your package.xml is valid for ROS 2 format 3 packages.
-->

<package format="3">
  <!-- The format version of the package.xml.
       Format 3 is the latest recommended for ROS 2 (Humble, Iron, etc.). -->

  <name>zenorak_teleop</name>
  <!-- The name of your package. Must match folder name and CMakeLists project name. -->

  <version>0.0.0</version>
  <!-- Package version. You can increment it as you update the package. -->

  <description>TODO: Package description</description>
  <!-- A short description of your package's purpose.
       Example: "Teleoperation node for Zenorak robot using WASD keys." -->

  <maintainer email="bargavanroboticsengineer@gmail.com">bargavan</maintainer>
  <!-- The maintainer of the package with an email.
       This is required for ROS 2 packages. -->

  <license>TODO: License declaration</license>
  <!-- The license of your package (e.g., MIT, Apache-2.0, BSD-3-Clause). -->

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- This is needed because we are using ament_cmake to build the package. -->

  <!-- Package dependencies -->
  <depend>rclpy</depend>
  <!-- Runtime dependency: ROS 2 Python client library used in your script -->

  <depend>std_msgs</depend>
  <!-- Runtime dependency: standard ROS 2 message types (like String) -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <!-- Required for automatic linting checks during testing -->

  <test_depend>ament_lint_common</test_depend>
  <!-- Common lint rules used by ROS 2 for style checks -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Declares that this package uses ament_cmake build system -->
  </export>
</package>
